--- a/formularios Alba/index.html
+++ b/formularios Alba/index.html
@@ -13,3 +13,17 @@
 </form>
 </body>
 </html>
+
+<form action="registrardatos.php" method="post">
+  Ingrese su nombre:
+  <input type="text" name="nombre" size="30"><br>
+  Seleccione el máximo nivel de estudios que tiene:
+  <br>
+  <input type="radio" name="estudios" value="1">Sin estudios<br>
+  <input type="radio" name="estudios" value="2">Primario<br>
+  <input type="radio" name="estudios" value="3">Secundario<br>
+  <input type="radio" name="estudios" value="4">Universitario<br>
+  <input type="submit" value="Enviar">
+</form>
+</body>
+</html>
