--- a/formularios Alba/index.html
+++ b/formularios Alba/index.html
@@ -23,5 +23,17 @@
   <input type="radio" name="estudios" value="4">Universitario<br>
   <input type="submit" value="Enviar">
 </form>
+
+<form action="registrardatos.php" method="post">
+  Ingrese su nombre:
+  <input type="text" name="nombre" size="30"><br>
+  Seleccione los lenguajes que conoce:
+  <br>
+  <input type="checkbox" name="java">Java<br>
+  <input type="checkbox" name="cmasmas">C++<br>
+  <input type="checkbox" name="c">C<br>
+  <input type="checkbox" name="csharp">C#<br>
+  <input type="submit" value="Enviar">
+</form>
 </body>
 </html>
