--- a/formularios Alba/index.html
+++ b/formularios Alba/index.html
@@ -29,10 +29,10 @@
     <br>
     Seleccione los lenguajes que conoce:
     <br>
-    <input type="checkbox" name="java">Java<br>
-    <input type="checkbox" name="cmasmas">C++<br>
-    <input type="checkbox" name="c">C<br>
-    <input type="checkbox" name="csharp">C#<br>
+    <input type="checkbox" name="Ingles">Ingles<br>
+    <input type="checkbox" name="Frances">Frances<br>
+    <input type="checkbox" name="Italiano">Italiano<br>
+    <input type="checkbox" name="Japones">Japones<br>
     <input type="submit" value="Enviar">
   </form>
   <form action="registrardatos.php" method="post">
