--- a/formularios Alba/index.html
+++ b/formularios Alba/index.html
@@ -107,7 +107,15 @@
   <input type="radio" name="estudios" value="4">Universitario<br>
   <input type="submit" value="Enviar">
 </form>
-
+Contrato:<br>
+<textarea name="comentarios" rows="5" cols="60" 
+readonly>
+<form action="registrardatos.php" method="post"></form>
+Por la presente ..............................
+</textarea> 
+<br>
+<input type="submit" value="Enviar">
+</form>
 </body>
 
 </html>
