--- a/formularios Alba/index.html
+++ b/formularios Alba/index.html
@@ -21,7 +21,7 @@
   <input type="text" value="453-" name="telefono" size="15"><br>
   <textarea name="comentarios" rows="5" cols="40">Ingrese aqui     sus comentarios</textarea><br>
   <input type="submit" value="Enviar">
-</form>
+  </form>
   </head>
 
   <body>
@@ -108,11 +108,10 @@
   <input type="submit" value="Enviar">
 </form>
 Contrato:<br>
-<textarea name="comentarios" rows="5" cols="60" 
-readonly>
+<textarea name="comentarios" rows="5" cols="60" readonly>
 <form action="registrardatos.php" method="post"></form>
 Por la presente ..............................
-</textarea> 
+</textarea>
 <br>
 <input type="submit" value="Enviar">
 </form>
