--- a/formularios Alba/index.html
+++ b/formularios Alba/index.html
@@ -49,72 +49,84 @@
       <input type="submit" value="Enviar">
     </form>
 
-</html>
+    <form action="registrardatos.php" method="post">
+      <fieldset>
+        <legend>Formulario de comentarios.</legend>
+        <label for="nombre">Ingrese su nombre:</label>
+        <input type="text" name="nombre" size="30" id="nombre"><br>
+        <label for="mail">Ingrese su mail:</label>
+        <input type="text" name="mail" size="50" id="mail"><br>
+        <label for="comentarios">Comentarios:</label><br>
+        <textarea name="comentarios" rows="5" cols="60" id="comentarios"></textarea>
+        <br>
+        <input type="submit" value="Enviar">
+      </fieldset>
+    </form>
 
-<form action="registrardatos.php" method="post">
-  <br>
-  Seleccione el máximo nivel de estudios que tiene:
-  <br>
-  <input type="radio" name="estudios" value="1">Sin estudios<br>
-  <input type="radio" name="estudios" value="2">Primario<br>
-  <input type="radio" name="estudios" value="3">Secundario<br>
-  <input type="radio" name="estudios" value="4">Universitario<br>
-  <input type="submit" value="Enviar">
-</form>
+    <form action="registrardatos.php" method="post">
+      <br>
+      Seleccione el máximo nivel de estudios que tiene:
+      <br>
+      <input type="radio" name="estudios" value="1">Sin estudios<br>
+      <input type="radio" name="estudios" value="2">Primario<br>
+      <input type="radio" name="estudios" value="3">Secundario<br>
+      <input type="radio" name="estudios" value="4">Universitario<br>
+      <input type="submit" value="Enviar">
+    </form>
 
-<form action="registrardatos.php" method="post">
-  <br>
-  Seleccione los lenguajes que conoce:
-  <br>
-  <input type="checkbox" name="Ingles">Ingles<br>
-  <input type="checkbox" name="Frances">Frances<br>
-  <input type="checkbox" name="Italiano">Italiano<br>
-  <input type="checkbox" name="Japones">Japones<br>
-  <input type="submit" value="Enviar">
-</form>
-<form action="registrardatos.php" method="post">
-  Seleccione uno o varios colores (Presione Ctrl para seleccionar varios colores)<br>
-  <select name="colores[]" size="4" multiple>
-    <option value="1">Rojo</option>
-    <option value="2">Verde</option>
-    <option value="3">Azul</option>
-    <option value="4">Amarillo</option>
-    <option value="5">Blanco</option>
-    <option value="6">Negro</option>
-    <option value="7">Naranja</option>
-    <option value="8">Violeta</option>
-  </select>
-  <br>
-  <input type="submit" value="Enviar">
-</form>
+    <form action="registrardatos.php" method="post">
+      <br>
+      Seleccione los lenguajes que conoce:
+      <br>
+      <input type="checkbox" name="Ingles">Ingles<br>
+      <input type="checkbox" name="Frances">Frances<br>
+      <input type="checkbox" name="Italiano">Italiano<br>
+      <input type="checkbox" name="Japones">Japones<br>
+      <input type="submit" value="Enviar">
+    </form>
+    <form action="registrardatos.php" method="post">
+      Seleccione uno o varios colores (Presione Ctrl para seleccionar varios colores)<br>
+      <select name="colores[]" size="4" multiple>
+        <option value="1">Rojo</option>
+        <option value="2">Verde</option>
+        <option value="3">Azul</option>
+        <option value="4">Amarillo</option>
+        <option value="5">Blanco</option>
+        <option value="6">Negro</option>
+        <option value="7">Naranja</option>
+        <option value="8">Violeta</option>
+      </select>
+      <br>
+      <input type="submit" value="Enviar">
+    </form>
 
-<form action="registrardatos.php" method="post">
-  <br>
-  Ingrese su clave:
-  <input type="password" name="clave" size="12">
-  <br>
-  <input type="submit" value="enviar">
-  <input type="reset" value="borrar">
-</form>
+    <form action="registrardatos.php" method="post">
+      <br>
+      Ingrese su clave:
+      <input type="password" name="clave" size="12">
+      <br>
+      <input type="submit" value="enviar">
+      <input type="reset" value="borrar">
+    </form>
 
-<form action="registrardatos.php" method="post">
-  <br>
-  Seleccione el máximo nivel de estudios que tiene:
-  <br>
-  <input type="radio" name="estudios" value="1">Sin estudios<br>
-  <input type="radio" name="estudios" value="2">Primario<br>
-  <input type="radio" name="estudios" value="3">Secundario<br>
-  <input type="radio" name="estudios" value="4">Universitario<br>
-  <input type="submit" value="Enviar">
-</form>
-Contrato:<br>
-<textarea name="comentarios" rows="5" cols="60" readonly>
+    <form action="registrardatos.php" method="post">
+      <br>
+      Seleccione el máximo nivel de estudios que tiene:
+      <br>
+      <input type="radio" name="estudios" value="1">Sin estudios<br>
+      <input type="radio" name="estudios" value="2">Primario<br>
+      <input type="radio" name="estudios" value="3">Secundario<br>
+      <input type="radio" name="estudios" value="4">Universitario<br>
+      <input type="submit" value="Enviar">
+    </form>
+    Contrato:<br>
+    <textarea name="comentarios" rows="5" cols="60" readonly>
 <form action="registrardatos.php" method="post"></form>
 Por la presente ..............................
 </textarea>
-<br>
-<input type="submit" value="Enviar">
-</form>
-</body>
+    <br>
+    <input type="submit" value="Enviar">
+    </form>
+  </body>
 
 </html>
